# cs5870-assignment1

./: .gitignore  pyproject.toml
notebooks/: custom_cnn_modeling.ipynb  data_exploration.ipynb  resnet50.ipynb  vgg16.ipynb
paper/: aaai23.bib  assignment1.aux  assignment1.bbl  assignment1.blg  assignment1.fdb_latexmk  assignment1.fls  assignment1.tex
plots/: accuracy.py
scratch_work/cifar10/: README.md  cifar10_2_layers_no_pooling.py  cifar10_2_layers_no_pooling.txt  cifar10_2_layers_pooling.py  cifar10_2_layers_pooling.txt  cifar10_2_layers_pooling_custom_learning_rate.py  cifar10_2_layers_pooling_custom_learning_rate.txt  cifar10_2_wider_layers.txt  cifar10_deep_pooling_custom.py  cifar10_deep_pooling_custom.txt  cifar10_deep_pooling_experiments.py  cifar10_deep_pooling_experiments.txt  cifar10_vgg16.py  cifar10_vgg16.txt  fine_tune_resnet50.py  fine_tune_resnet50.txt  fine_tune_vgg16.py  fine_tune_vgg16.txt  resnet50.py  resnet50.txt
scratch_work/imagenet/: README.md  imagenet_base.py  imagenet_base.txt
scratch_work/mnist/: fine_tune_vgg16.py  mnist_1_layer_cnn_dropout.py  mnist_1_layer_cnn_dropout.txt  mnist_1_layer_cnn_no_dropout.py  mnist_1_layer_cnn_no_dropout.txt  mnist_2_layer_cnn_dropout.py  mnist_2_layer_cnn_dropout.txt  mnist_2_layer_cnn_dropout_pooling.py  mnist_2_layer_cnn_dropout_pooling.txt  mnist_2_layer_cnn_no_dropout.py  mnist_2_layer_cnn_no_dropout.txt  mnist_3_layer_cnn_pooling_no_dropout.py  mnist_3_layer_cnn_pooling_no_dropout.txt  mnist_explore.py  mnist_vgg16.py  mnist_vgg16.txt
