[tool.poetry]
name = "cs5870-assignment-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tensorflow = "^2.13.0"
tensorflow-datasets = "^4.9.3"
matplotlib = "^3.8.0"
ipywidgets = "^8.1.1"
scipy = "^1.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
